[1.5.0] Log4j instrumentation tests